frontend/hazelcast.yaml
kind: Service
apiVersion: v1
metadata:
  name: hazelcast-service
spec:
  selector:
    hazelcast: h1
  ports:
  - name: hazelcast
    port: 5701
    protocol: TCP
