frontend/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
  - http:
     paths:
     - path: /react
       backend:
         serviceName: frontend
         servicePort: 8667
